--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ body {
 }
 
 .hello-header {
-  font-size: 8rem;
-  color: #16451f;
+  font-size: 7rem;
+  color: #55a165;
   text-transform: uppercase;
   font-weight: 500;
   letter-spacing: -0.3rem;
@@ -117,9 +117,10 @@ body {
   margin-bottom: 3.2rem;
 }
 
-/* .hello-header span {
-  color: #ff922b;
-} */
+.hello-header span {
+  color: #16451f;
+  font-size: 8rem;
+}
 
 .hello-text {
   font-size: 3.6rem;
@@ -224,14 +225,22 @@ body {
 }
 
 .stat {
-  border: 2px solid #16451f;
+  /* border: 2px solid #16451f; */
+  /* box-shadow: 5px 20px 12px rgba(22, 69, 31, 0.2); */
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 25rem;
+  padding: 1.2rem;
   text-align: center;
-  /* justify-content: space-between; */
+  transition: all 0.2s;
+  border-radius: 14px;
+}
+
+.stat:hover {
+  box-shadow: 5px 20px 25px rgba(22, 69, 31, 0.2);
+  transform: translateY(-1rem);
 }
 
 .stat-icon {
@@ -305,13 +314,19 @@ body {
   width: 70%;
 }
 
+.personality {
+  margin-bottom: 3.6rem;
+}
+
 .personality-icon {
-  width: 2.4rem;
-  height: 2.4rem;
+  width: 6rem;
+  height: 6rem;
   color: #95c59f;
+  margin-bottom: 1.2rem;
 }
 
 .personality-text {
   font-size: 1.8rem;
   text-transform: uppercase;
+  padding: 1.2rem;
 }
