--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 .text-box,
 .img-box {
   flex: 1 0 0;
-  height: 80vh;
+  min-height: 80vh;
   overflow: hidden;
 }
 
@@ -329,4 +329,201 @@ body {
   font-size: 1.8rem;
   text-transform: uppercase;
   padding: 1.2rem;
+}
+
+/* /////////////////////////*/
+/* Seciotn 7 - Portfolio /*/
+/* /////////////////////////*/
+
+.section-portfolio {
+  margin-bottom: 9.6rem;
+}
+
+.portfolio-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 3.2rem;
+  margin-bottom: 6rem;
+}
+
+.portfolio-header {
+  font-size: 4.2rem;
+  font-weight: 500;
+  letter-spacing: 1.4px;
+  margin-bottom: 2.2rem;
+  grid-column: span 2;
+}
+
+.project--1,
+.project--3,
+.project--4 {
+  grid-column: span 3;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.project--1:hover .project-text,
+.project--3:hover .project-text,
+.project--4:hover .project-text {
+  filter: opacity(0.8);
+  bottom: 1%;
+}
+
+.project-img {
+  width: 100%;
+  border-radius: 4px;
+}
+
+.project-text {
+  font-size: 1.8rem;
+  color: #fff;
+  position: absolute;
+  bottom: -5%;
+  padding: 1.2rem;
+  background-color: rgba(22, 69, 31, 1);
+  filter: opacity(0);
+  transition: all 0.5s;
+}
+
+.project--main {
+  grid-column: 4/8;
+  grid-row: 1/3;
+  height: 100%;
+  position: relative;
+  padding: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  border-radius: 14px;
+  box-shadow: 4px 8px 8px rgba(9, 28, 12, 0.3);
+  transition: all 0.3s;
+}
+
+.project-link--main:link,
+.project-link--main:visited {
+  text-decoration: none;
+  color: #091c0c;
+}
+
+.project-img-box--main {
+  overflow: hidden;
+  margin-bottom: 2.2rem;
+  border-radius: 4px;
+  box-shadow: 1px 2px 5px rgba(9, 28, 12, 0.5);
+}
+
+.project-img--main {
+  scale: 1.05;
+}
+
+.project-header--main {
+  font-size: 3.2rem;
+  font-weight: 500;
+  margin-bottom: 2.2rem;
+}
+
+.project-text--main {
+  font-size: 1.8rem;
+  color: #16451f;
+}
+.btn-arr {
+  position: absolute;
+  border: none;
+  background-color: #ff922b;
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 12px rgba(9, 28, 12, 0.3);
+}
+
+.btn--left {
+  left: 0;
+  bottom: 50%;
+  transform: translate(-50%);
+}
+
+.btn--right {
+  right: 0;
+  bottom: 50%;
+  transform: translate(50%);
+}
+
+.btn-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: #16451f;
+}
+
+.project--main:hover {
+  /* transform: translateY(-1rem); */
+  box-shadow: 4px 8px 32px rgba(9, 28, 12, 0.3);
+  scale: 1.05;
+  background-color: #fff;
+  z-index: 1;
+}
+
+.btn--cv:link,
+.btn--cv:visited {
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 2.2rem;
+  letter-spacing: -0.5px;
+  color: #fff;
+  display: block;
+  padding: 1.2rem 2.4rem;
+  border-radius: 4px;
+  width: 70%;
+  margin: 0 auto;
+  background-color: #ff922b;
+  text-align: center;
+}
+
+.btn--cv:hover,
+.btn--cv:active {
+  background-color: #cc7522;
+}
+
+.btn--cv-icon {
+  width: 5rem;
+  height: 5rem;
+  position: absolute;
+
+  /* transform: translate(-50%); */
+}
+
+.btn--cv-box {
+  width: 50%;
+  position: relative;
+  margin: 0 auto;
+}
+
+.btn--cv-box:hover .left {
+  rotate: 180deg;
+  left: 2%;
+  transition: all 0.5s;
+}
+
+.btn--cv-box:hover .right {
+  rotate: 0deg;
+  transition: all 0.5s;
+  right: 2%;
+}
+
+.left {
+  left: 0;
+  rotate: 200deg;
+}
+.right {
+  rotate: 20deg;
+  right: 0;
 }
