--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ body {
   margin: 0 auto;
 }
 
-/* ///////////////////*/
-/* Seciotn 1 - Navigation /*/
-/* ///////////////////*/
+/* //////////////////////*/
+/* Section - Navigation /*/
+/* //////////////////////*/
 
 .section-nav {
   margin: 1.8rem auto;
@@ -80,7 +80,7 @@ body {
 }
 
 /* ///////////////////*/
-/* Seciotn 2 - hello /*/
+/* Seciotn - Hello /*/
 /* ///////////////////*/
 
 .section-hello {
@@ -163,34 +163,6 @@ body {
 }
 
 /* ///////////////////*/
-/* Seciotn 3 - Logos /*/
-/* ///////////////////*/
-
-.section-logos {
-  margin-bottom: 9.6rem;
-}
-
-.logos {
-  display: flex;
-  justify-content: space-around;
-}
-
-.logo {
-  height: 6rem;
-}
-
-.logo-link:link,
-.logo-link:visited {
-  filter: opacity(0.5) grayscale(1);
-  transition: all 0.2s;
-}
-
-.logo-link:hover {
-  filter: opacity(0.9) grayscale(0.2);
-  /* filter: opacity(1); */
-}
-
-/* ///////////////////*/
 /* Seciotn 4 - About /*/
 /* ///////////////////*/
 
@@ -212,9 +184,9 @@ body {
   line-height: 1.7;
 }
 
-/* ////////////////////////*/
-/* Seciotn 5 - Statistics /*/
-/* ////////////////////////*/
+/* //////////////////////*/
+/* Seciotn - Statistics /*/
+/* //////////////////////*/
 
 .section-stats {
   margin-bottom: 9.6rem;
@@ -269,9 +241,9 @@ body {
 .color-orange {
   color: #cc7522;
 }
-/* /////////////////////////*/
-/* Seciotn 6 - Personality /*/
-/* /////////////////////////*/
+/* ///////////////////////*/
+/* Seciotn - Personality /*/
+/* ///////////////////////*/
 
 .section-personalities {
   margin-bottom: 9.6rem;
@@ -333,12 +305,12 @@ body {
   padding: 1.2rem;
 }
 
-/* /////////////////////////*/
-/* Seciotn 7 - Portfolio /*/
-/* /////////////////////////*/
+/* /////////////////////*/
+/* Seciotn - Portfolio /*/
+/* /////////////////////*/
 
 .section-portfolio {
-  margin-bottom: 9.6rem;
+  margin-bottom: 4.6rem;
 }
 
 .portfolio-grid {
@@ -347,6 +319,8 @@ body {
   grid-template-rows: 1fr 1fr;
   gap: 3.2rem;
   margin-bottom: 6rem;
+
+  padding-top: 5.2rem;
 }
 
 .portfolio-header {
@@ -367,6 +341,8 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+  filter: opacity(0.7) grayscale(0);
+  transition: all 0.2s;
 }
 
 .project--1:hover .project-text,
@@ -374,6 +350,12 @@ body {
 .project--4:hover .project-text {
   filter: opacity(0.8);
   bottom: 1%;
+}
+
+.project--1:hover,
+.project--3:hover,
+.project--4:hover {
+  filter: opacity(1) grayscale(0);
 }
 
 .project-img {
@@ -388,6 +370,9 @@ body {
   bottom: -5%;
   padding: 1.2rem;
   background-color: rgba(22, 69, 31, 1);
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  margin: 0 4%;
   filter: opacity(0);
   transition: all 0.5s;
 }
@@ -434,6 +419,7 @@ body {
   font-size: 1.8rem;
   color: #16451f;
 }
+
 .btn-arr {
   position: absolute;
   border: none;
@@ -473,6 +459,47 @@ body {
   z-index: 1;
 }
 
+/* /////////////////*/
+/* Seciotn - Logos /*/
+/* /////////////////*/
+
+.section-logos {
+  margin-bottom: 4.7rem;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logo {
+  height: 6rem;
+}
+
+.logo-link:link,
+.logo-link:visited {
+  filter: opacity(0.5) grayscale(1);
+  transition: all 0.2s;
+}
+
+.logo-link:hover {
+  filter: opacity(0.9) grayscale(0.2);
+}
+
+/* /////////////////////*/
+/* Seciotn - Button CV /*/
+/* /////////////////////*/
+
+.section-cv {
+  margin-bottom: 9.6rem;
+}
+
+.btn--cv-box {
+  width: 50%;
+  position: relative;
+  margin: 0 auto;
+}
+
 .btn--cv:link,
 .btn--cv:visited {
   text-decoration: none;
@@ -492,39 +519,4 @@ body {
 .btn--cv:hover,
 .btn--cv:active {
   background-color: #cc7522;
-}
-
-.btn--cv-icon {
-  width: 5rem;
-  height: 5rem;
-  position: absolute;
-
-  /* transform: translate(-50%); */
-}
-
-.btn--cv-box {
-  width: 50%;
-  position: relative;
-  margin: 0 auto;
-}
-
-.container--portfolio:hover .left {
-  rotate: 180deg;
-  left: 2%;
-  transition: all 0.2s;
-}
-
-.container--portfolio:hover .right {
-  rotate: 0deg;
-  transition: all 0.2s;
-  right: 2%;
-}
-
-.left {
-  left: 0;
-  rotate: 210deg;
-}
-.right {
-  rotate: 30deg;
-  right: 0;
 }
