--- a/queries.css
+++ b/queries.css
@@ -219,4 +219,52 @@
 /* Width between: 580px  */
 /* /////////////////////////// */
 @media (max-width: 36.5em) {
+  .hello-box {
+    gap: 1.2rem;
+  }
+  .text-box {
+    padding-left: 0;
+  }
+  .hello-header {
+    font-size: 3.2rem;
+    letter-spacing: 0;
+  }
+  .hello-header span {
+    font-size: 4.2rem;
+  }
+
+  .hello-text {
+    font-size: 1.8rem;
+    margin-bottom: 2.2rem;
+  }
+
+  .btn:link,
+  .btn:visited {
+    font-size: 1.4rem;
+    padding: 1.2rem 2.4rem;
+    width: 16rem;
+  }
+
+  .hello-img {
+    width: 30rem;
+  }
+
+  .personalities-flex {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.2rem;
+  }
+
+  .personalities-text {
+    width: 100%;
+  }
+
+  .personalities-grid {
+    padding-top: 2.2rem;
+    width: 100%;
+  }
+
+  .personality {
+    text-align: center;
+  }
 }
