--- a/style.css
+++ b/style.css
@@ -167,7 +167,6 @@ body {
 /* ///////////////////*/
 
 .section-hello {
-  margin-bottom: 9.6rem;
   margin-top: 9.6rem;
 }
 
@@ -252,6 +251,7 @@ body {
 
 .section-about {
   text-align: center;
+  padding-top: 9.6rem;
   margin-bottom: 6rem;
 }
 
@@ -273,7 +273,7 @@ body {
 /* //////////////////////*/
 
 .section-stats {
-  margin-bottom: 9.6rem;
+  /* margin-bottom: 9.6rem; */
 }
 
 .stats {
@@ -330,7 +330,7 @@ body {
 /* ///////////////////////*/
 
 .section-personalities {
-  margin-bottom: 9.6rem;
+  padding-top: 9.6rem;
 }
 
 .personalities-flex {
@@ -394,6 +394,7 @@ body {
 /* /////////////////////*/
 
 .section-portfolio {
+  padding-top: 6rem;
   margin-bottom: 9.6rem;
 }
 
